src/styles/components/AttendeesSettings.less
@keyframes left_to_right {
  from {
    right: -350px;
  }
  to {
    right: 0px;
  }
}

@keyframes right_to_left {
  from {
    right: 0px;
  }
  to {
    right: -350px;
  }
}

.attendees-settings-hidden {
  display: none;
}

.attendees-settings-out {
  right: -350px !important;
  animation: right_to_left 250ms ease !important;
}
.attendees-settings {
  position: absolute;
  animation: left_to_right 250ms ease;
  // background: @white;
  background: #212330;
  width: 350px;
  // box-shadow: 4px 0px 0px 0 rgba(0, 0, 0, 0.14),
  //   0 3px 1px -2px rgba(0, 0, 0, 0.12), -4px 2px 10px 0 rgba(0, 0, 0, 0.2);
  right: 0;
  height: ~"calc(100% - 85px)";
  z-index: 100;
  .attendees-settings-header {
    h1 {
      // color: #192246;
      color: #fff;
      margin: 20px 0px 10px 6px;
      font-size: 20px;
      // font-family: @font-family-semibold;
      font-family: "DINNextLTPro-Bold";
      padding: 0;
    }
    display: flex;
    justify-content: space-between;
    margin: 0;
    padding: 5px 10px 0 6px;
    border-bottom: 1px solid #13141c;
    > a {
      margin: 10px 20px;
    }
  }

  .title-section {
    color: #192246;
    margin: 10px 0px 10px 25px;
    font-size: 13px;
    font-family: @font-family-semibold;
    padding: 0;
  }

  ul {
    overflow: hidden;
    list-style: none;
    padding-left: 20px;
    padding-bottom: 10px;
    overflow-y: auto;
  }

  .settings {
    font-family: @font-family-semibold;
    width: 100%;
    height: 100%;
    overflow: auto;
    //background-color: #fff;
    //background: #212330;
    .content {
      margin: 2% auto;
      border-radius: 0px;

      h3 {
        margin-bottom: 32px !important;
      }

      h3,
      p {
        text-align: center;
      }
      p {
        font-size: 11px;
        margin: 0;
        font-family: @font-family-medium;
      }

      .test-volume {
        font-family: @font-family-medium;
        border: 1px solid #8fb2e0;
        color: #8fb2e0;
        font-size: 12px;
        margin-left: 60px;
        margin-top: 10px;
        border-radius: 4px;
        padding: 3px 15px 3px 15px;
        cursor: pointer;
      }

      form {
        padding: 15px;
      }

      .form-group {
        width: 100%;
        color: @black;
        label {
          font-weight: bold;
          font-size: 16px;
          font-family: "DINNextLTPro-Medium";
          width: 100%;
          text-align: left;
          margin-top: 10px;
        }
        .select-selected:after {
          position: absolute;
          content: "";
          top: 14px;
          right: 10px;
          width: 0;
          height: 0;
          border: 6px solid transparent;
          border-color: #fff transparent transparent transparent;
        }
        .select-audio-output {
          -webkit-appearance: none;
          -moz-appearance: none;
          background-size: 20px 18px, 8px 16px;
          background-position: 3% 50%, 97% 50%;
          background-repeat: no-repeat, no-repeat;
          background-image: url("../../static/images/icons/icon-speaker.svg"),
            url("../../static/images/icons/dropdown-arrows.svg");
        }
        .select-video-device {
          -webkit-appearance: none;
          -moz-appearance: none;
          background-size: 21px 13px, 8px 16px;
          background-position: 3% 50%, 97% 50%;
          background-repeat: no-repeat, no-repeat;
          background-image: url("../../static/images/icons/icon-camera.svg"),
            url("../../static/images/icons/dropdown-arrows.svg");
        }
        .select-audio-input {
          -webkit-appearance: none;
          -moz-appearance: none;
          background-size: 15px 24px, 8px 16px;
          background-position: 4% 50%, 97% 50%;
          background-repeat: no-repeat, no-repeat;
          background-image: url("../../static/images/icons/icon-mic.svg"),
            url("../../static/images/icons/dropdown-arrows.svg");
        }
        select {
          float: right;
          background-color: #fff;
          -webkit-border-radius: 20px;
          padding: 1px 17px 0 38px;
          font-size: 16px;
          font-family: "DINNextLTPro-Regular";
          height: 35px;
          width: 100%;
          margin: auto;
          margin-bottom: 10px;
          margin-top: 10px;
          color: #000;
          // white-space: nowrap;
          // overflow: hidden;
          // text-overflow: ellipsis;
        }
        select:hover::before {
          color: rgba(255, 255, 255, 0.6);
          background-color: rgba(255, 255, 255, 0.2);
        }
        select:focus {
          outline: none;
        }

        &.no-margin {
          margin: 0;
        }
      }
      .form-group.last {
        margin-top: 32px;
        margin-bottom: 32px;
      }
      .switch-enable {
        .switch-mode {
          width: 100%;

          input {
            opacity: 0;
            position: relative;
            display: inherit;
          }
          label {
            position: relative;
            display: block;
            padding: 0.5em 1em 0.5em 5em;
            width: 90% !important;
            margin: auto;
            color: #fff;
            font-size: 18px;
            font-family: 'DINNextLTPro-Regular';
            cursor: pointer;
            text-align: left;
            &::before {
              content: "";
              position: absolute;
              top: 50%;
              left: 0.7em;
              width: 3em;
              height: 1.2em;
              border-radius: 0.6em;
              background: #eee;
              transform: translateY(-50%);
            }
            &::after {
              content: "";
              position: absolute;
              top: 50%;
              left: 0.5em;
              width: 1.4em;
              height: 1.4em;
              border-radius: 50%;
              box-sizing: border-box;
              background-color: #ddd;
              transform: translateY(-50%);
            }
            &,
            &::before,
            &::after {
              transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
            }
          }
          label:hover,
          input:focus + label {
            color: #fff;
            &::after {
              background-color: #ccc;
            }
          }
          input:checked {
            & + label {
              &::before {
                background: #00AFEF;
              }
              &::after {
                transform: translateX(2em) translateY(-50%);
              }
            }
          }
        }
        // margin-top: 18px;
        margin-bottom: 18px;
      }

      .hint-text {
        margin-top: 32px;
        color: #979797;
      }

      .close {
        float: right;
        font-weight: bold;
        color: @sidebarSubtitleColor;
        margin: -10px 10px 0 0;
        a {
          cursor: pointer;
          text-decoration: none;
          position: absolute;
          &:hover {
            color: darken(@sidebarSubtitleColor, 6%);
          }
        }
      }

      .loadbar {
        list-style: none;
        width: 100%;
        float: right;
        margin-bottom: 32px;
        padding: 0 0 0 10px;
        margin-top: 16px;
        display: flex;
        justify-content: center;
        li {
          float: left;
          position: relative;
          width: 12px;
          height: 12px;
          margin-right: 3px;
          background: #424248;
          border-radius: 12px;

          &:first-child {
            margin-left: 0;
          }

          > .ins {
            background-color: lighten(#00afef, 10%);
            width: 12px;
            height: 12px;
            border-radius: 12px;
          }
        }
      }
    }
  }
}

.vxt-widget-mode-on {
  .attendees-settings {
    height: 100%;
  }
}

